# AISafetyIntervention_LiteratureExtraction

./: .gitignore  LICENSE  README.md  config.py  config.yaml  hello.py  pyproject.toml  requirements.txt
Story4/: globalgraph.py
ard_examples/: agentmodels.jsonl.example.json  agisf.jsonl.example.json  youtube.jsonl.example.json
ardhito/: __init__.py
ardhito/llm_assisted_graph_merging/docs/: LLM_Assisted_Graph_Merging_Step1.md
ardhito/llm_assisted_graph_merging/examples/: walkthrough_prepare_llm_input.py
ardhito/llm_assisted_graph_merging/src/: db.py  extract.py  merge_indexer.py  merge_types.py  prompts.py
data/raw/ard_examples/: arxiv.jsonl.example.json  blogs.jsonl.example.json  eaforum.jsonl.example.json
docs/: LLM_Assisted_Graph_Merging_Step1.md
examples/: dump_examples.py  test_loaders.py  walkthrough_prepare_llm_input.py
inputdata_development_paper_set/: directory.txt
intervention_graph_creation/prompt/: final_primary_prompt.py
intervention_graph_creation/prompt/evals/: 2310.12558v2_1p2p_eval.md  2311.07590v4_1p2p_eval.md
intervention_graph_creation/prompt/response_evals/: 2307.16513v2_1p2p_eval.md  2308.14752v1_1p2p_eval.md  2310.01405v4_1p2p_eval.md  2311.07092v3_1p2p_eval.md  2311.14876v1_1p2p_eval.md
intervention_graph_creation/prompt/response_samples/: 2307.16513v2_strict_1p_o3.txt  2308.14752v1_strict_1p_o3.txt  2310.01405v4_strict_1p_o3.txt  2310.12558v2_strict_1p_o3.txt  2311.07092v3_strict_1p_o3.txt  2311.07590v4_strict_1p_o3.txt  (+1 more)
intervention_graph_creation/unit_tests/: test_data_interfaces_loaders.py  test_data_interfaces_pdf_extractor.py  test_metadata_complete.py  test_metadata_flow.py
notebooks/: dev.ipynb
src/: __init__.py  db.py  extract.py  merge_indexer.py  merge_input_builder.py  merge_types.py  prompts.py
src/publications/: __init__.py  alignment_dataset.py  arxiv.py  dedupe.py  models.py  utils.py
utilities/: json_to_gexf.py
(+52 files in other folders)
