[project]
name = "aisafetyintervention-literatureextraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "falkordb>=1.2.0",
    "jupyterlab>=4.4.5",
    "openai>=1.99.7",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "networkx>=3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.1.1",
]
