[project]
name = "aisafetyintervention-literatureextraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "falkordb>=1.2.0",
    "jupyterlab>=4.4.5",
    "openai>=1.99.7",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=2.5.0",
    "tqdm>=4.67.1",
    "usearch>=2.19.3",
]
